<resources>
    <string name="app_name">用藥小幫手</string>
    <string name="title">用藥小幫手</string>
    <string name="check">TODO</string>
    <string name="clock">TODO</string>
    <string name="list">TODO</string>
    <string name="qrcode">TODO</string>
    <string name="str_title1">設置鬧鐘</string>
    <string name="str_button1">新增鬧鐘</string>
    <string name="str_button2">移除鬧鐘</string>
    <string name="str_default">目前無鬧鐘</string>
    <string name="_10">10</string>
    <string name="str_text1" />
    <string name="str_text2" />
    <string name="str_text3" />
    <string name="refresh">refresh</string>
    <string name="settings">settings</string>
    <string name="todo">TODO</string>
    <string name="delete">刪除</string>
    <string name="fix">修改</string>
    <string name="add">新增</string>
    <string name="home">home</string>
    <string name="logol">TODO</string>
    <string name="clockset">鬧鐘設定</string>
    <string name="mdlist">藥物清單</string>
    <string name="calender">簽到</string>
    <string name="scan">QRcode掃描</string>


</resources>
