<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TimePicker
        android:id="@+id/tPicker"
        android:layout_width="600dp"
        android:layout_height="700dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:layout_x="27dp"
        android:layout_y="47dp"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="399dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tPicker">

        <EditText
            android:id="@+id/mEdit"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:autofillHints=""
            android:inputType="number"
            android:text="@string/_10"
            android:textSize="16sp">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/text1"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/str_text1"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/str_text2"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/str_text3"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>